# nokhwa

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATING-0.13.md  MIGRATING-0.14.md  MIGRATION-0.12.md  README.md  TODO.md  UPDATE_CHECKLIST.md  flake.nix  release-please-config.json
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: build-matrix.yml  device-test.yml  lint.yml  msmf-obs-virtualcam.yml  test-core.yml  v4l-loopback.yml
docs/superpowers/plans/: 2026-04-08-matrix-ci.md
docs/superpowers/specs/: 2026-04-08-matrix-ci-design.md
examples/: gstreamer_probe.rs  gstreamer_url_probe.rs  hotplug_probe.rs  msmf_probe.rs  runner.rs  stream_camera.rs
examples/captesting/: Cargo.toml  README.md
examples/captesting/src/: main.rs
examples/capture/: Cargo.toml  README.md
examples/capture/src/: main.rs
examples/decoder_test/: Cargo.toml  README.md
examples/decoder_test/src/: main.rs
examples/live_view/: Cargo.toml
examples/live_view/src/: main.rs
examples/setting/: Cargo.toml
examples/setting/src/: main.rs
examples/threaded-capture/: Cargo.toml  README.md
examples/threaded-capture/src/: main.rs
nokhwa-bindings-gstreamer/: Cargo.toml
nokhwa-bindings-gstreamer/src/: controls.rs  format.rs  lib.rs  pipeline.rs  uri.rs
nokhwa-bindings-linux/: Cargo.toml
nokhwa-bindings-linux-v4l/: Cargo.toml
nokhwa-bindings-linux-v4l/src/: hotplug.rs  lib.rs
nokhwa-bindings-linux/src/: lib.rs
nokhwa-bindings-macos/: Cargo.toml
nokhwa-bindings-macos-avfoundation/: Cargo.toml
nokhwa-bindings-macos-avfoundation/src/: callback.rs  capture.rs  device.rs  ffi.rs  hotplug.rs  lib.rs  session.rs  types.rs
nokhwa-bindings-macos/src/: callback.rs  capture.rs  controls.rs  device.rs  ffi.rs  format.rs  lib.rs  session.rs  types.rs  util.rs
nokhwa-bindings-macos/src/internal/: callback.rs  device.rs  helpers.rs  mod.rs  session.rs
nokhwa-bindings-uvc/: Cargo.toml
nokhwa-bindings-uvc/src/: descriptors.rs  lib.rs
nokhwa-bindings-windows/: Cargo.toml
nokhwa-bindings-windows-msmf/: Cargo.toml
nokhwa-bindings-windows-msmf/src/: capture.rs  hotplug.rs  lib.rs
nokhwa-bindings-windows/src/: capture.rs  lib.rs
nokhwa-core/: Cargo.toml  README.md
nokhwa-core/benches/: bgr_to_rgb.rs  nv12_to_rgb.rs  rgb_to_luma.rs  yuyv_extract_luma.rs  yuyv_to_rgb.rs
nokhwa-core/benches/common/: mod.rs
nokhwa-core/src/: buffer.rs  buffer_tests.rs  error.rs  error_tests.rs  format_types.rs  format_types_tests.rs  frame.rs  frame_tests.rs  lib.rs  pixel_format.rs  simd.rs  testing.rs  traits.rs  traits_tests.rs  types.rs  types_tests.rs  wgpu.rs
nokhwa-core/src/simd/: bgr_to_rgb.rs  mod.rs  nv12_to_rgb.rs  rgb_to_luma.rs  rgb_to_rgba.rs  yuyv_extract_luma.rs  yuyv_to_rgb.rs
nokhwa-tokio/: Cargo.toml  README.md
nokhwa-tokio/examples/: tokio_runner.rs
nokhwa-tokio/src/: lib.rs
nokhwa-tokio/tests/: drop_semantics.rs
src/: camera.rs  init.rs  js_camera.rs  lib.rs  query.rs  runner.rs  session.rs  threaded.rs
src/backends/: hotplug.rs
src/backends/capture/: avfoundation.rs  mod.rs  msmf_backend.rs  opencv_backend.rs  uvc_backend.rs
tests/: device_tests.rs  format_tests.rs  runner.rs  session.rs
