[package]
name        = "nokhwa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Simple-to-use, cross-platform Rust Webcam Capture Library"
keywords    = [ "camera", "webcam", "capture", "cross-platform" ]
categories  = [ "api-bindings", "multimedia", "os", "web-programming" ]

[workspace]
members = [
    "nokhwa-bindings-macos-avfoundation",
    "nokhwa-bindings-windows-msmf",
    "nokhwa-bindings-linux-v4l",
    "nokhwa-core",
]

[workspace.package]
version    = "0.11.0"
authors    = [ "l1npengtul <l1npengtul@protonmail.com>", "Dave Choi <dave.dev@icloud.com>" ]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/DaveDev42/nokhwa"
exclude = [
    "examples/threaded-capture",
]

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default            = [ "decoding" ]
serialize          = [ "serde", "nokhwa-core/serialize" ]
decoding           = [ "nokhwa-core/mjpeg" ]
input-avfoundation = [ "nokhwa-bindings-macos-avfoundation" ]
input-msmf         = [ "nokhwa-bindings-windows-msmf" ]
input-v4l          = [ "nokhwa-bindings-linux-v4l" ]
# Disable arena buffer on v4l
# This should fix crash on Raspberry Pi that have faulty v4l driver.
# WARNING: This create a performance regression, half of the frames will be dropped
# You shouldn't enable this unless you have to.
input-v4l-no-arena-buffer = [ "nokhwa-bindings-linux-v4l/no-arena-buffer" ]
input-native              = [ "input-avfoundation", "input-v4l", "input-msmf" ]
input-opencv = [
    "opencv",
    "opencv/videoio",
    "opencv/rgb",
    "opencv/clang-runtime",
    "nokhwa-core/opencv-mat",
]
output-wgpu = [ "wgpu", "nokhwa-core/wgpu-types" ]
output-threaded  = [ "parking_lot", "arc-swap" ]
docs-only = [
    "input-native",
    "input-opencv",
    "output-wgpu",
    "output-threaded",
    "serialize",
]
docs-nolink = [ "nokhwa-core/docs-features" ]
docs-features = [  ]
# Gates integration tests that require a physical camera device (CI only)
device-test = [  ]

[dependencies]
thiserror = "2.0"

[dependencies.nokhwa-core]
path = "nokhwa-core"

[dependencies.serde]
version  = "1.0"
optional = true

[dependencies.image]
version          = "0.25"
default-features = false

[dependencies.wgpu]
version          = "27"
default-features = false
optional         = true

[dependencies.opencv]
version          = "0.97"
default-features = false
optional         = true

[dependencies.rgb]
version  = "0.8"
optional = true

[dependencies.nokhwa-bindings-windows-msmf]
path     = "nokhwa-bindings-windows-msmf"
optional = true

[dependencies.nokhwa-bindings-macos-avfoundation]
path     = "nokhwa-bindings-macos-avfoundation"
optional = true

[dependencies.nokhwa-bindings-linux-v4l]
path     = "nokhwa-bindings-linux-v4l"
optional = true

[dependencies.parking_lot]
version  = "0.12"
optional = true

[dependencies.arc-swap]
version  = "1"
optional = true

[package.metadata.docs.rs]
features = [ "docs-only", "docs-nolink", "docs-features" ]
