[package]
name        = "nokhwa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A simple-to-use, cross-platform Rust webcam capture library with a type-safe frame API"
keywords    = [ "camera", "webcam", "capture", "cross-platform" ]
categories  = [ "api-bindings", "multimedia", "os", "web-programming" ]

[workspace]
members = [
    "nokhwa-bindings-macos-avfoundation",
    "nokhwa-bindings-windows-msmf",
    "nokhwa-bindings-linux-v4l",
    "nokhwa-bindings-gstreamer",
    "nokhwa-core",
    "nokhwa-tokio",
]

[workspace.package]
version    = "0.14.1" # x-release-please-version
authors    = [ "l1npengtul <l1npengtul@protonmail.com>", "Dave Choi <dave.dev@icloud.com>" ]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/DaveDev42/nokhwa"
exclude = [
    "examples/threaded-capture",
]

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default            = [ "mjpeg" ]
# Enable serde Serialize/Deserialize on core types
serialize          = [ "serde", "nokhwa-core/serialize" ]
# MJPEG decoding support (enabled by default)
mjpeg              = [ "nokhwa-core/mjpeg" ]

# ── Input backends (enable at least one) ──────────────────────────────
# macOS AVFoundation backend
input-avfoundation = [ "nokhwa-bindings-macos-avfoundation" ]
# Windows Media Foundation backend
input-msmf         = [ "nokhwa-bindings-windows-msmf" ]
# Linux Video4Linux2 backend
input-v4l          = [ "nokhwa-bindings-linux-v4l" ]
# Cross-platform GStreamer backend (requires a system GStreamer install
# with `libgstreamer1.0-dev` on Linux or the upstream installer on
# macOS / Windows). Session 1 ships device enumeration only —
# `query(ApiBackend::GStreamer)` works; streaming lands in follow-up
# PRs. See `TODO.md`.
input-gstreamer    = [ "nokhwa-bindings-gstreamer", "nokhwa-bindings-gstreamer/backend" ]
# Disable arena buffer on v4l.
# This should fix crashes on Raspberry Pis that have a faulty v4l driver.
# WARNING: This creates a performance regression — half of the frames will be dropped.
# You shouldn't enable this unless you have to.
input-v4l-no-arena-buffer = [ "nokhwa-bindings-linux-v4l/no-arena-buffer" ]
# Structured logging via the `log` crate. When enabled, replaces internal
# dbg!()/eprintln!() diagnostics with proper log::warn!/log::error! calls.
# Without this feature, these diagnostics are silent (errors are still
# propagated to callers). Users must supply a `log` backend (e.g.
# env_logger, tracing-log) to see output.
logging = [ "log" ]
# Automatically selects the right backend for the current OS.
# Alias: input-auto
input-native              = [ "input-avfoundation", "input-v4l", "input-msmf" ]
# Convenience alias for input-native
input-auto                = [ "input-native" ]
# Cross-platform OpenCV backend (requires OpenCV system library).
# `nokhwa::open` dispatches to this backend only when no native input-* backend
# matches the current target/feature configuration.
input-opencv = [
    "opencv",
    "opencv/videoio",
    "opencv/rgb",
    "opencv/clang-runtime",
    "nokhwa-core/opencv-mat",
]

# ── Output features ───────────────────────────────────────────────────
# Copy frames directly into wgpu textures
output-wgpu = [ "wgpu", "nokhwa-core/wgpu-types" ]
# Background-thread capture helper (CameraRunner)
runner = [ ]

# ── Documentation / CI helpers ────────────────────────────────────────
# Enables all features for documentation builds (used by docs.rs)
docs-only = [
    "input-native",
    "output-wgpu",
    "runner",
    "serialize",
    "logging",
]
# Build docs without linking platform libraries (for cross-platform doc checks)
docs-nolink = [ "nokhwa-core/docs-features" ]
# Enables #[doc(cfg(…))] annotations (requires nightly Rust)
docs-features = [  ]
# Gates integration tests that require a physical camera device (CI only)
device-test = [  ]

[dependencies]
thiserror = "2.0"

[dependencies.nokhwa-core]
path = "nokhwa-core"

[dependencies.serde]
version  = "1.0"
optional = true

[dependencies.image]
version          = "0.25"
default-features = false

[dependencies.wgpu]
version          = "27"
default-features = false
optional         = true

[dependencies.opencv]
version          = "0.97"
default-features = false
optional         = true

[dependencies.rgb]
version  = "0.8"
optional = true

[dependencies.nokhwa-bindings-windows-msmf]
path     = "nokhwa-bindings-windows-msmf"
optional = true

[dependencies.nokhwa-bindings-macos-avfoundation]
path     = "nokhwa-bindings-macos-avfoundation"
optional = true

[dependencies.nokhwa-bindings-linux-v4l]
path     = "nokhwa-bindings-linux-v4l"
optional = true

[dependencies.nokhwa-bindings-gstreamer]
path     = "nokhwa-bindings-gstreamer"
optional = true

[dependencies.log]
version  = "0.4"
optional = true

[dev-dependencies.nokhwa-core]
path     = "nokhwa-core"
features = [ "testing" ]

[package.metadata.docs.rs]
features = [ "docs-only", "docs-nolink", "docs-features" ]

[[example]]
name = "stream_camera"
path = "examples/stream_camera.rs"

[[example]]
name = "runner"
path = "examples/runner.rs"
required-features = [ "runner" ]

[[example]]
name = "hotplug_probe"
path = "examples/hotplug_probe.rs"

[[example]]
name = "msmf_probe"
path = "examples/msmf_probe.rs"
