[package]
name        = "nokhwa-bindings-linux-v4l"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The V4L2 bindings crate for `nokhwa`"
keywords    = [ "v4l", "v4l2", "linux", "capture", "webcam" ]

[features]
# Disable arena buffer of v4l2 for the crate to work on raspberry pi with faulty v4l2 driver
# https://github.com/l1npengtul/nokhwa/pull/121
no-arena-buffer = [  ]

[dependencies]

[dependencies.nokhwa-core]
path    = "../nokhwa-core"

[target.'cfg(target_os="linux")'.dependencies]
v4l = { version = "0.14", features = [ "v4l2-sys" ] }
libc = "0.2"
