[package]
name        = "nokhwa-bindings-uvc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform UVC (USB Video Class) bindings for `nokhwa`, via libusb/rusb"
keywords    = [ "uvc", "usb", "libusb", "capture", "webcam" ]

[features]
# Produces a platform-neutral stub crate (no libusb linkage) for docs
# builds that want to reference the types without a real USB dependency.
# Symmetric with the `docs-only` feature on `nokhwa-bindings-windows-msmf`.
docs-only = [  ]

[dependencies]

[dependencies.nokhwa-core]
path    = "../nokhwa-core"

# rusb ships prebuilt libusb on macOS / Windows and links against the
# system libusb-1.0 on Linux (pulls in `pkg-config`). The UVC crate only
# depends on it on the three major targets that actually support
# userspace USB; other targets fall through to the stub module.
[target.'cfg(any(target_os="linux",target_os="macos",target_os="windows"))'.dependencies]
rusb = "0.9"

[package.metadata.docs.rs]
features = [ "docs-only" ]
