[package]
name        = "nokhwa-bindings-windows-msmf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Windows Media Foundation bindings crate for `nokhwa`"
keywords    = [ "media-foundation", "windows", "capture", "webcam" ]

[features]
docs-only = [  ]

[dependencies]
once_cell = "1"

[dependencies.nokhwa-core]
path    = "../nokhwa-core"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_DirectShow",
    "Win32_Media",
    "Win32",
    "Win32_Media_KernelStreaming",
]

[package.metadata.docs.rs]
features = [ "docs-only" ]
