[package]
name        = "nokhwa-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core type definitions for nokhwa"
keywords    = [ "camera", "webcam", "capture", "cross-platform" ]

[features]
default            = [  ]
serialize          = [ "serde" ]
wgpu-types         = [ "wgpu" ]
mjpeg              = [ "mozjpeg" ]
opencv-mat         = [ "opencv", "opencv/clang-runtime", "bytemuck" ]
docs-features      = [ "serialize", "wgpu-types", "mjpeg" ]
test-fail-warnings = [  ]


[dependencies]
thiserror = "2.0"
bytes     = "1.3"

[dependencies.image]
version          = "0.25"
default-features = false

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]
optional = true

[dependencies.wgpu]
version          = "27"
default-features = false
optional         = true

[dependencies.opencv]
version  = "0.97"
optional = true

[dependencies.bytemuck]
version  = "1"
optional = true

[dependencies.mozjpeg]
version  = "0.10"
optional = true

[package.metadata.docs.rs]
features = [ "docs-features" ]
