[package]
name        = "nokhwa-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core type definitions for nokhwa"
keywords    = [ "camera", "webcam", "capture", "cross-platform" ]

[features]
default            = [  ]
serialize          = [ "serde" ]
wgpu-types         = [ "wgpu" ]
mjpeg              = [ "mozjpeg" ]
opencv-mat         = [ "opencv", "opencv/clang-runtime" ]
docs-features      = [ "serialize", "wgpu-types", "mjpeg" ]
test-fail-warnings = [  ]
# Internal: exposes bench-only wrappers around SIMD/scalar routines for
# `cargo bench`. NOT part of the stable API — do not depend on this.
bench              = [  ]


[dependencies]
thiserror = "2.0"
bytes     = "1.3"

[dependencies.image]
version          = "0.25"
default-features = false

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]
optional = true

[dependencies.wgpu]
version          = "27"
default-features = false
optional         = true

[dependencies.opencv]
version  = "0.97"
optional = true

[dependencies.mozjpeg]
version  = "0.10"
optional = true

[package.metadata.docs.rs]
features = [ "docs-features" ]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "bgr_to_rgb"
harness = false
required-features = ["bench"]

[[bench]]
name    = "yuyv_to_rgb"
harness = false
required-features = ["bench"]

[[bench]]
name    = "nv12_to_rgb"
harness = false
required-features = ["bench"]

[[bench]]
name    = "rgb_to_luma"
harness = false
required-features = ["bench"]

[[bench]]
name    = "yuyv_extract_luma"
harness = false
required-features = ["bench"]
