[package]
name = "nokhwactl"
version = "0.10.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>", "Dave Choi <dave.dev@icloud.com>", "The Nokhwa Contributors"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nokhwa/default"]

[dependencies]
color-eyre = "0.6.2"

[dependencies.clap]
version = "4.0.20"
features = ["derive"]

# Use these as you need
[dependencies.nokhwa]
path = "../.."
features = ["input-native", "runner"]

[dependencies.image]
version = "0.25"
features = ["png"]

# Opt out of the root workspace so this example builds standalone.
[workspace]
