[package]
name = "decoder_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"

[dependencies.nokhwa-core]
path = "../../nokhwa-core"

# Opt out of the root workspace so this example builds standalone.
[workspace]
