[package]
name = "nokhwa-live-view"
version = "0.1.0"
authors = [
    "Dave Choi <dave.dev@icloud.com>",
    "The Nokhwa Contributors",
]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Live-view demo: opens a camera, decodes frames, and paints them in a minifb window."

[dependencies]
minifb = "0.27"

[dependencies.nokhwa]
path = "../.."
features = ["input-native", "runner", "mjpeg"]

[dependencies.image]
version = "0.25"
default-features = false

# Opt out of the root workspace so this example builds standalone with
# its own (heavier) dependency tree.
[workspace]
